--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ pylint-django = "*"
 django = "*"
 django-allauth = "*"
 requests = "*"
+gunicorn = "*"
+django-heroku = "*"
 
 [requires]
 python_version = "3.7"
